fixed alignment on pages with wrap

--- a/components/Logo/ServiceIcons/ServiceIcon.module.css
+++ b/components/Logo/ServiceIcons/ServiceIcon.module.css
@@ -1,6 +1,6 @@
 .IconContainer{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     margin: 3rem 0 2rem 0;
 }
@@ -28,7 +28,7 @@
     height: 75px;
     width: 150px;
 }
-@media (min-width: 500px) {
+@media (min-width: 1100px) {
     .IconContainer{
         flex-direction: row;
     }
