--- a/components/TwoColumnKontaktDiv/TwoColumnKontaktDiv.module.css
+++ b/components/TwoColumnKontaktDiv/TwoColumnKontaktDiv.module.css
@@ -4,12 +4,6 @@
 .cols2{
     display: flex;
     margin-top: 10rem;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-}
-
-@media (min-width: 576px) {
-    .cols2{
-        flex-direction: row;
-    }
 }
