--- a/pages/kontakt/Kontakt.module.css
+++ b/pages/kontakt/Kontakt.module.css
@@ -16,7 +16,7 @@
 .GoogleMaps iframe{
     border-radius: 5px;
 }
-@media (min-width: 576px) {
+@media (min-width: 1100px) {
     .kontaktData{
         margin: 1rem 0 0 7rem;
         text-align: left;
